--- a/pcv-online-exercises/pcv-exs/pcv-online-ex03-projective-geometry/ex-09-Huy.ipynb
+++ b/pcv-online-exercises/pcv-exs/pcv-online-ex03-projective-geometry/ex-09-Huy.ipynb
@@ -250,11 +250,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[550.      0.    400.   ]\n",
+      " [  0.    551.375 300.   ]\n",
+      " [  0.      0.      1.   ]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Setup the calibration matrix K and print out the result\n"
+    "# Setup the calibration matrix K and print out the result\n",
+    "import numpy as np\n",
+    "\n",
+    "# Calibration matrix\n",
+    "c = 550.\n",
+    "m = 0.0025\n",
+    "s = 0\n",
+    "K = np.array([\n",
+    "    [c, c*s, 400.],\n",
+    "    [0, c*(1+m), 300.],\n",
+    "    [0, 0, 1.]\n",
+    "])\n",
+    "print(K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Projection matrix\n",
+    "# P = sH_c @ cK @ R @ [I3 | -X0]\n",
+    "# In many case, people merge sH_c @ cK to the compact calibration matrix called K\n",
+    "# Then x = P @ X\n",
+    "\n",
+    "yaw = 0.\n",
+    "pitch = 0.\n",
+    "roll = 0.\n",
+    "\n",
+    "R_yaw = np.array([\n",
+    "    [np.cos(yaw), -np.sin(yaw), 0.],\n",
+    "    [np.sin(yaw), np.cos(yaw), 0],\n",
+    "    [0, 0, 1], \n",
+    "])\n",
+    "\n",
+    "R_pitch = np.array([\n",
+    "    [np.cos(pitch), 0., np.sin(pitch)],\n",
+    "    [0, 1, 0],\n",
+    "    [-np.sin(pitch), 0, np.cos(pitch)]\n",
+    "])\n",
+    "\n",
+    "R_roll = np.array([\n",
+    "    [1., 0., 0.],\n",
+    "    [0, np.cos(roll), -np.sin(roll)],\n",
+    "    [0, np.sin(roll), np.cos(roll)]\n",
+    "])\n",
+    "\n",
+    "R = R_yaw @ R_pitch @ R_roll\n",
+    "print(R)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[550.      0.    400.      0.   ]\n",
+      " [  0.    551.375 300.      0.   ]\n",
+      " [  0.      0.      1.      0.   ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Projection matrix\n",
+    "last_comp = np.array([\n",
+    "    [1., 0, 0, 0],\n",
+    "    [0, 1, 0, 0],\n",
+    "    [0, 0, 1, 0]\n",
+    "])\n",
+    "\n",
+    "P = K @ R @ last_comp\n",
+    "print(P)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[675. 300.   1.]\n",
+      "[1.500000e+03 1.954125e+03 1.000000e+00]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 102 231\n",
+    "X1 = np.array([1., 0, 2, 1])\n",
+    "X2 = np.array([2., 3, 1, 1])\n",
+    "\n",
+    "x1 = P @ X1\n",
+    "x2 = P @ X2 \n",
+    "print(x1 / x1[-1])\n",
+    "print(x2 / x2[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## B2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.99756405  0.          0.06975647]\n",
+      " [ 0.          1.          0.        ]\n",
+      " [-0.06975647  0.          0.99756405]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# X0 changed to [0.4, 0., 10] and rotate 4 deg around Y-axis\n",
+    "# See: http://planning.cs.uiuc.edu/node102.html for yaw, pitch, roll\n",
+    "\n",
+    "pitch = 4 * np.pi / 180.\n",
+    "R_pitch = np.array([\n",
+    "    [np.cos(pitch), 0., np.sin(pitch)],\n",
+    "    [0, 1, 0],\n",
+    "    [-np.sin(pitch), 0, np.cos(pitch)]\n",
+    "])\n",
+    "R = R_yaw @ R_pitch @ R_roll\n",
+    "print(R)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5.20757638e+02  0.00000000e+00  4.37391681e+02 -4.58221986e+03]\n",
+      " [-2.09269421e+01  5.51375000e+02  2.99269215e+02 -2.98432137e+03]\n",
+      " [-6.97564737e-02  0.00000000e+00  9.97564050e-01 -9.94773791e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Projection matrix \n",
+    "last_comp = np.array([\n",
+    "    [1., 0, 0, -0.4],\n",
+    "    [0, 1, 0, 0],\n",
+    "    [0, 0, 1, -10.]\n",
+    "])\n",
+    "P = K @ R @ last_comp\n",
+    "print(P)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[397.22430374 300.           1.        ]\n",
+      "[341.41032246 118.02178287   1.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1 = P @ X1\n",
+    "x2 = P @ X2 \n",
+    "print(x1 / x1[-1])\n",
+    "print(x2 / x2[-1])"
    ]
   },
   {
