Update Jupyter Test for estimate Essential Matrix and Relative Orientation

--- a/pcv-online-exercises/pcv-exs/pcv-online-ex05-camera-intrinsics-extrinsics/ex4_4_Huy.ipynb
+++ b/pcv-online-exercises/pcv-exs/pcv-online-ex05-camera-intrinsics-extrinsics/ex4_4_Huy.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -242,6 +242,9 @@
    ],
    "source": [
     "# OK, NEXT TIME RUN, JUST RUN FROM THIS CELL \n",
+    "import numpy as np\n",
+    "import ex4_4 as ex\n",
+    "\n",
     "\n",
     "pts1 = np.load('point_pair_cube_0.npy')\n",
     "pts2 = np.load('point_pair_cube_1.npy')\n",
@@ -251,9 +254,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "K = np.array(\n",
+    " [[-1.23543537e+03,  1.08226965e+01,  2.82869653e+02],\n",
+    "  [-0.00000000e+00, -1.23745635e+03,  4.69737272e+02],\n",
+    "  [+0.00000000e+00,  0.00000000e+00,  1.00000000e+00]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(11, 3)\n",
+      "(11, 3)\n",
+      "(11, 9)\n",
+      "[[ 3.32564467e-02 -2.57897253e-02 -1.99098135e-01 -9.86255477e-03\n",
+      "   7.64821871e-03  5.90446803e-02 -1.67035450e-01  1.29532731e-01\n",
+      "   1.00000000e+00]\n",
+      " [ 2.02156770e-02  1.13084435e-02 -1.46496225e-01  2.30765328e-02\n",
+      "   1.29087770e-02 -1.67227887e-01 -1.37994525e-01 -7.71927294e-02\n",
+      "   1.00000000e+00]\n",
+      " [ 2.04581950e-03 -5.68501941e-03  4.27855660e-02 -1.11399576e-02\n",
+      "   3.09562379e-02 -2.32977246e-01  4.78156464e-02 -1.32872366e-01\n",
+      "   1.00000000e+00]\n",
+      " [ 2.04136763e-04  5.33798217e-04  5.37433597e-03  1.29776923e-03\n",
+      "   3.39354307e-03  3.41665446e-02  3.79836252e-02  9.93235666e-02\n",
+      "   1.00000000e+00]\n",
+      " [ 3.95357584e-02 -2.26057408e-03  2.20356829e-01 -1.39559622e-02\n",
+      "   7.97973474e-04 -7.77850659e-02  1.79416988e-01 -1.02586977e-02\n",
+      "   1.00000000e+00]\n",
+      " [ 3.71739759e-02  3.75251303e-02  2.03910234e-01  2.63141980e-02\n",
+      "   2.65627683e-02  1.44341145e-01  1.82305592e-01  1.84027695e-01\n",
+      "   1.00000000e+00]\n",
+      " [ 2.81515954e-05  2.70737036e-03  1.34954801e-02  3.09745191e-04\n",
+      "   2.97885408e-02  1.48487501e-01  2.08600177e-03  2.00613119e-01\n",
+      "   1.00000000e+00]\n",
+      " [ 8.18702749e-03 -1.99107247e-03 -1.02854584e-01  4.91852290e-03\n",
+      "  -1.19617719e-03 -6.17919787e-02 -7.95980805e-02  1.93581305e-02\n",
+      "   1.00000000e+00]\n",
+      " [ 9.87690291e-03  3.22810216e-03  9.96649740e-02 -3.83430387e-03\n",
+      "  -1.25317873e-03 -3.86908527e-02  9.91010434e-02  3.23895349e-02\n",
+      "   1.00000000e+00]\n",
+      " [ 6.03714986e-04  1.96215429e-03 -3.47524139e-02  2.50375372e-03\n",
+      "   8.13753380e-03 -1.44126761e-01 -1.73718864e-02 -5.64609496e-02\n",
+      "   1.00000000e+00]\n",
+      " [ 1.92638075e-02 -4.68165241e-04  1.48592804e-01 -9.70022243e-03\n",
+      "   2.35742958e-04 -7.48233831e-02  1.29641591e-01 -3.15065890e-03\n",
+      "   1.00000000e+00]]\n",
+      "D = [3.32353275e+00 5.89916620e-01 5.03145881e-01 5.92609935e-02\n",
+      " 5.01791022e-02 3.75063429e-02 2.22397622e-02 2.35611809e-03\n",
+      " 9.34932128e-04]\n",
+      "Rank of E_hat: 3\n",
+      "[[-0.53586332  0.78713266  0.30540576]\n",
+      " [-0.62241878 -0.61269618  0.48703004]\n",
+      " [ 0.57047819  0.07089125  0.81824756]]\n",
+      "===============================================\n",
+      "[[ 0.68005698  0.57833996 -0.45060558]\n",
+      " [-0.54155372  0.8105492   0.22300125]\n",
+      " [-0.49420853 -0.09237356 -0.8644218 ]]\n",
+      "ESTIMATED E: [[-0.02734439 -0.81441222  0.10266283]\n",
+      " [ 0.86710296 -0.04139012 -0.49131838]\n",
+      " [-0.05605961  0.57139017 -0.02900923]]\n",
+      "=====================================\n",
+      "Rank of E: 2\n",
+      "\n",
+      " Essential Matrix:\n",
+      " [[-0.02734439 -0.81441222  0.10266283]\n",
+      " [ 0.86710296 -0.04139012 -0.49131838]\n",
+      " [-0.05605961  0.57139017 -0.02900923]]\n"
+     ]
+    }
+   ],
    "source": [
     "# compute essential matrix from point pairs\n",
     "E = ex.E_from_point_pairs(pts1, pts2, K)\n",
@@ -269,9 +348,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R = [[ 0.9954142  -0.02167683  0.09317022]\n",
+      " [ 0.02542876  0.99890491 -0.0392728 ]\n",
+      " [-0.09221688  0.0414619   0.99487535]]\n",
+      "t = [0.57047819 0.07089125 0.81824756]\n",
+      "Sb = [[ 0.         -0.81824756  0.07089125]\n",
+      " [ 0.81824756  0.         -0.57047819]\n",
+      " [-0.07089125  0.57047819  0.        ]]\n",
+      "===========================================================\n",
+      "R = [[ 0.9954142  -0.02167683  0.09317022]\n",
+      " [ 0.02542876  0.99890491 -0.0392728 ]\n",
+      " [-0.09221688  0.0414619   0.99487535]]\n",
+      "t = [-0.57047819 -0.07089125 -0.81824756]\n",
+      "Sb = [[ 0.          0.81824756 -0.07089125]\n",
+      " [-0.81824756  0.          0.57047819]\n",
+      " [ 0.07089125 -0.57047819  0.        ]]\n",
+      "===========================================================\n",
+      "Final Rotation:\n",
+      " [[ 0.9954142  -0.02167683  0.09317022]\n",
+      " [ 0.02542876  0.99890491 -0.0392728 ]\n",
+      " [-0.09221688  0.0414619   0.99487535]]\n",
+      "Final Baseline:\n",
+      " [-0.57047819 -0.07089125 -0.81824756]\n",
+      "R = [[-0.43154382  0.12707104  0.89309735]\n",
+      " [ 0.04464136 -0.98580796  0.16183269]\n",
+      " [ 0.90098672  0.10970698  0.41974671]]\n",
+      "t = [0.57047819 0.07089125 0.81824756]\n",
+      "Sb = [[ 0.         -0.81824756  0.07089125]\n",
+      " [ 0.81824756  0.         -0.57047819]\n",
+      " [-0.07089125  0.57047819  0.        ]]\n",
+      "===========================================================\n",
+      "R = [[-0.43154382  0.12707104  0.89309735]\n",
+      " [ 0.04464136 -0.98580796  0.16183269]\n",
+      " [ 0.90098672  0.10970698  0.41974671]]\n",
+      "t = [-0.57047819 -0.07089125 -0.81824756]\n",
+      "Sb = [[ 0.          0.81824756 -0.07089125]\n",
+      " [-0.81824756  0.          0.57047819]\n",
+      " [ 0.07089125 -0.57047819  0.        ]]\n",
+      "===========================================================\n",
+      "NUMBER OF SOLUTION: 1\n",
+      "FINAL ROTATION: \n",
+      "[[ 0.9954142  -0.02167683  0.09317022]\n",
+      " [ 0.02542876  0.99890491 -0.0392728 ]\n",
+      " [-0.09221688  0.0414619   0.99487535]]\n",
+      "FINAL BASELINE: \n",
+      "[-0.57047819 -0.07089125 -0.81824756]\n"
+     ]
+    }
+   ],
    "source": [
     "# given E compute relative orientation\",\n",
     "Z = np.array([[ 0, 1, 0],\n",
@@ -284,6 +415,9 @@
     "W_CHECK = [W, W.T]\n",
     "Z_CHECK = [Z, Z.T]\n",
     "\n",
+    "num_solution = 0\n",
+    "R_final = None\n",
+    "b_final = None\n",
     "for w in W_CHECK:\n",
     "    for z in Z_CHECK:\n",
     "        R, Sb = ex.relative_orientation_from_E(E, z, w)\n",
@@ -293,13 +427,34 @@
     "        X0 = ex.triangulate_points(pts1, pts2, K, R, b)\n",
     "\n",
     "        # Triangulated points in coord system of 2nd cam\n",
-    "        X1 = np.dot(R.T, X0 - np.expand_dims(b, 1))\n",
+    "        X1 = np.dot(R.T, (X0 - b).T).T\n",
     "\n",
     "        if ex.point_in_front_of_cam(X0) and ex.point_in_front_of_cam(X1):\n",
     "            print('Final Rotation:\\n', R)\n",
     "            R_final = R\n",
     "            print('Final Baseline:\\n', b)\n",
-    "            b_final = b"
+    "            b_final = b\n",
+    "            num_solution += 1\n",
+    "print(f'NUMBER OF SOLUTION: {num_solution}')\n",
+    "print(f'FINAL ROTATION: \\n{R_final}')\n",
+    "print(f'FINAL BASELINE: \\n{b_final}')\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.4.3  Sanity check the result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read more and I'll come back this weekend !!!!"
    ]
   }
  ],
